--- a/public/index.html
+++ b/public/index.html
@@ -5,17 +5,17 @@
     <!-- <link rel="icon" href="%PUBLIC_URL%/favicon1.ico" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
-      name="Ashutosh's Portfolio"
+      name="Arnulfo Gonzalez Jr's Portfolio"
       content="Portfolio content"
     />
-    <meta property="og:title" content="Ashutosh Hathidara Portfolio" />
+    <meta property="og:title" content="Arnulfo Gonzalez Jr's Portfolio" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://ashutosh1919.github.io/" />
-    <meta name="description" content="Ashutosh's Personal Portfolio Website" property="og:description">
+    <meta property="og:url" content="https://github.com/gonzalez-persevere" />
+    <meta name="description" content="Arnulfo Gonzalez Jr's Personal Portfolio Website" property="og:description">
     <meta name="description" content="/icons/desc.png" property="og:image">
-    <meta name="keywords" content="Ashutosh, PortFolio, MasterPortfolio, Ashutosh's Portfolio" />
-    <meta name="author" content="Ashutosh" />
-    <meta name="application-name" content="Ashutosh's PortFolio" />
+    <meta name="keywords" content="Arnulfo Gonzalez Jr, PortFolio, Software Engineer, Software Developer, Web Developer, Full Stack Developer, Front-end Developer, Back-end Developer" />
+    <meta name="author" content="Arnulfo Gonzalez Jr" />
+    <meta name="application-name" content="Arnulfo's PortFolio" />
 
     <link rel="apple-touch-icon" sizes="57x57" href="/icons/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/icons/apple-icon-60x60.png">
@@ -34,17 +34,20 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="/icons/ms-icon-144x144.png">
     <meta name="theme-color" content="#000000">
-
+    
+    <title>Arnulfo Gonzalez Jr's Portfolio</title>
+  </head>
     <!--Adsense Advertisement-->
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-    <script>
+    <!-- <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> -->
+    <!-- <script>
       (adsbygoogle = window.adsbygoogle || []).push({
         google_ad_client: "ca-pub-8856447829714090",
         enable_page_level_ads: true
       });
-    </script>
+    </script> -->
 
-    <!-- Global site tag (gtag.js) - Google Ads: 825508380 --> <script async src="https://www.googletagmanager.com/gtag/js?id=AW-825508380"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'AW-825508380'); </script>
+    <!-- Global site tag (gtag.js) - Google Ads: 825508380 -->
+      <script async src="https://www.googletagmanager.com/gtag/js?id=AW-825508380"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'AW-825508380'); </script>
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -77,7 +80,6 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Ashutosh's Portfolio</title>
     <script type="text/javascript">
       // Single Page Apps for GitHub Pages
       // MIT License
@@ -106,7 +108,6 @@
         }
       })(window.location);
     </script>
-  </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
